# meetup

./: LICENSE  README.md
courses/programming-in-haskell/: README.md
courses/programming-in-haskell/pih-exercises/: LICENSE  README.md  pih-exercises.cabal
courses/programming-in-haskell/pih-exercises/bench/: Chapter09Bench.hs
courses/programming-in-haskell/pih-exercises/src/: Chapter02.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter09.hs
courses/programming-in-haskell/pih-exercises/test/: Chapter02Spec.hs  Chapter03Spec.hs  Chapter04Spec.hs  Chapter05Spec.hs  Chapter06Spec.hs  Chapter07Spec.hs  Chapter08Spec.hs  Chapter09Spec.hs
presentations/March-30-2017/getting-started-with-haskell/: README.md  getting-started-with-haskell.md
presentations/September-13-2018/: introduction-to-nix.md  type-safety-in-practice.md
