name:                pih-exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/EindhovenHaskellMeetup/meetup/blob/master/courses/programming-in-haskell/pih-exercises/README.md
license:             BSD3
license-file:        LICENSE
author:              The Eindhoven Haskell Meetup team
maintainer:          damian.nadales@gmail.com
copyright:           2017 The Eindhoven Haskell Meetup team
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter02
                     , Chapter03
                     , Chapter04
                     , Chapter05
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pih-exercises
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pih-exercises
  default-language:    Haskell2010

test-suite pih-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Chapter02Spec
                     , Chapter03Spec
                     , Chapter04Spec
                     , Chapter05Spec
  build-depends:       base
                     , pih-exercises
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EindhovenHaskellMeetup/meetup/tree/master/courses/programming-in-haskell/pih-exercises
